--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-community/blur": "^4.4.1",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.28",
+    "expo": "^53.0.20",
     "expo-asset": "~10.0.10",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.26",
@@ -51,7 +51,7 @@
     "react-native-simple-toast": "^3.3.1",
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
-    "reanimated-color-picker": "^3.0.4",
+    "reanimated-color-picker": "^3.0.6",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
